--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: lightgray;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 25px;
+    font-family: "Book Antiqua", sans-serif;
+    font-size: 62.5%;
+}
+
+.card {
+    margin: 25px;
+    width: 300px;
+    height: 400px;
+}
+
+.card:nth-child(even){
+    background-color: lightsalmon;
+}
+
+.card:nth-child(odd) {
+    background-color: lightblue;
+}
+
+.card_img {
+    width: 100%;
+}
+
+.card button {
+    width: 100%;
+    padding: 10px;
 }
