--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     padding: 25px;
-    font-family: "Book Antiqua", sans-serif;
+    font-family: "Trebuchet MS", sans-serif;
     font-size: 62.5%;
 }
 
