--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -2,19 +2,20 @@
 
 {% block title %}Home{% endblock %}
 {% block body %}
-
-<div class="card">
-    <img class="card_img" src="https://www.signfix.com.au/wp-content/uploads/2017/09/placeholder-600x400.png" alt="placeholder">
-    <button type="button">Take</button>
-    <div class="card_text">
-        <h2>Titre livre</h2>
-        <div>Disponible</div>
-        <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Aliquam amet dicta distinctio dolorum eius enim expedita iste laboriosam,
-            mollitia nobis nostrum numquam quaerat quod repellendus saepe similique, tempora, totam voluptatibus.
+    {% for book in books %}
+        <div class="card">
+            <img class="card_img" src="https://www.signfix.com.au/wp-content/uploads/2017/09/placeholder-600x400.png" alt="placeholder">
+            <button type="button" data-id="{{ book.id }}">Take</button>
+            <div class="card_text">
+                <h2>{{ book.name }}</h2>
+                <div>{{ book.disponibility }}</div>
+                <div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aliquam amet dicta distinctio dolorum eius enim expedita iste laboriosam,
+                    mollitia nobis nostrum numquam quaerat quod repellendus saepe similique, tempora, totam voluptatibus.
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    {% endfor %}
 
 {% endblock %}
