--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            Virtual Bibliothèque | <a href="/">Home</a> | <a href="/addBook">Add book</a>
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
